[tool.poetry]
name = "invoicing"
version = "0.1.0"
description = "A simple program for logging work hours for clients, and generating customizable invoices for them."
authors = ["Samuel Morris <dodobird181@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
taskw = "^2.0.0"
requests = "^2.32.3"
odfpy = "^1.4.1"
pandas = "^2.2.3"
invoicegenerator = "^1.2.0"
google-api-python-client = "^2.170.0"
google-auth-httplib2 = "^0.2.0"
google-auth-oauthlib = "^1.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
